kde4libs (4:4.14.12-0~ubuntu1) UNRELEASED; urgency=medium

  * Vivid backport.

 -- Scarlett Clark <sgclark@kubuntu.org>  Fri, 02 Oct 2015 06:07:41 -0700

kde4libs (4:4.14.8-4~ubuntu1) UNRELEASED; urgency=medium

  * Vivid backport.

 -- Scarlett Clark <sgclark@kubuntu.org>  Wed, 27 May 2015 16:37:17 -0700

kde4libs (4:4.14.7-4~ubuntu1) UNRELEASED; urgency=medium

  * New upstream release. 
  * Remove upstream_fixbic.diff applied upstream. 
  * Fix watch file
  * wrap-and-sort 

 -- Scarlett Clark <sgclark@kubuntu.org>  Thu, 16 Apr 2015 05:53:28 -0700

kde4libs (4:4.14.6-4~ubuntu1) vivid; urgency=medium

  * New upstream release
  * Update watch file 
  * Add upstream_fixbic.diff per:
    https://git.reviewboard.kde.org/r/122812 
  * Add patch to git.. 
  * git rm .directory files added by git add 

 -- Scarlett Clark <sgclark@kubuntu.org>  Fri, 13 Mar 2015 15:03:01 -0700

kde4libs (4:4.14.5-4~ubuntu1) vivid; urgency=medium

  * New upstream release 
  * Fix watch file new version 

 -- Scarlett Clark <sgclark@kubuntu.org>  Tue, 10 Feb 2015 11:26:42 -0800

kde4libs (4:4.14.4-4~ubuntu1) UNRELEASED; urgency=medium

  * New upstream release for kde-applications.
  * Fix watch file for new location. 
  * Batchpatch symbols file: removed two optional Missing.
  * Removed 2 private symbols sortedKeys for nepomuk
  

 -- Scarlett Clark <sgclark@kubuntu.org>  Thu, 05 Feb 2015 14:49:07 +0000

kde4libs (4:4.14.2-4~ubuntu3) vivid; urgency=medium

  * Readd kdelibs5-plugins depends on katepart

 -- Philip Muškovac <yofel@kubuntu.org>  Wed, 26 Nov 2014 23:41:37 +0100

kde4libs (4:4.14.2-4~ubuntu2) vivid; urgency=medium

  * Remove katepart from the kdelibs5-plugins depends to allow kate to build 

 -- Philip Muškovac <yofel@kubuntu.org>  Wed, 26 Nov 2014 00:12:14 +0100

kde4libs (4:4.14.2-4~ubuntu1) vivid; urgency=medium

  * Merge with Debian Git, remaining changes:
    - libkio5, libkhtml5, only suggest kdelibs5-plugins
    - kdelibs5-plugins only suggests kde-runtime