@@ -1,6 +1,8 @@
 kde4libs (4:4.14.12-0~ubuntu1) UNRELEASED; urgency=medium
 
   * Vivid backport.
+  * Update ld_exclude_libs_qtuitools.diff to match change
+    in code that caused fuzz. 
 
  -- Scarlett Clark <sgclark@kubuntu.org>  Fri, 02 Oct 2015 06:07:41 -0700
 
